final_project_cubablog
My final Project is a simple blog design to inform.

--- a/final_project_template/index.html
+++ b/final_project_template/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>March Madness</title>
+  <title>Cuba Blog</title>
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -13,47 +13,69 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400" rel="stylesheet">
+
 </head>
 
 <body>
   <nav>
     <div class="navbar">
-      <a href="#">Sports</a>
-      <a href="#">School</a>
-      <a href="#">Championships</a>
-      <a href="#">Video</a>
+      <a href="#">Welcome</a>
+      <a href="#">Home</a>
+      <a href="#">Experiences</a>
+      <a href="#">Travel Tips</a>
+
     </div>
   </nav>
   <header>
-    <div class="main-header">
-        <h1> MARCH MADNESS </h1>
+    <div id="showcase">
+      <h1>CUBA</h1>
     </div>
   </header>
   <article>
-    <h2>MEET THE TEAMS</h2>
+    <div id="content">
+      <h2>Welcome</h2>
+    </div>
+    <div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius soluta incidunt, eum quos consequuntur aliquam nobis velit mollitia iste, natus ex repellendus delectus quisquam et quae, in atque a. Perspiciatis excepturi ipsum temporibus, eius odit
+        deleniti quasi voluptates eaque aliquam, iste consequatur repudiandae illo a. Voluptates eligendi reiciendis corporis itaque soluta fugit atque quaerat ipsum reprehenderit sapiente, voluptatem repellat eveniet fuga natus tempore modi vero distinctio
+        nulla accusantium recusandae, omnis.</P>
+    </div>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius soluta incidunt, eum quos consequuntur aliquam nobis velit mollitia iste, natus ex repellendus delectus quisquam et quae, in atque a. Perspiciatis excepturi ipsum temporibus, eius odit
-      deleniti quasi voluptates eaque aliquam, iste consequatur repudiandae illo a. Voluptates eligendi reiciendis corporis itaque soluta fugit atque quaerat ipsum reprehenderit sapiente, voluptatem repellat eveniet fuga natus tempore modi vero distinctio
-      nulla accusantium recusandae, omnis.</P>
+    <div class="OuterDiv">
+      <div class="prettybox">
+        <img src="img/havana_opt.jpg" alt="">
+        <h3> Havana </h3>
+        <p>Esse aliquam ea, similique repudiandae nihil numquam, neque enim perspiciatis. Facilis dolor praesentium impedit quidem, non unde accusantium, commodi error, soluta dolores modi blanditiis similique amet hic earum, reiciendis consectetur animi
+          in. Exercitationem distinctio necessitatibus molestias quas laboriosam nam modi porro accusantium blanditiis, beatae incidunt aliquid nostrum laborum, magni cum recusandae autem doloremque qui perferendis iste non quaerat fugit. Aspernatur voluptatem
+          impedit, enim!</p>
+      </div>
+      <div class="prettybox">
+        <img src="img/IMG_4101_opt.jpg" alt="">
+        <h3>Vinales </h3>
 
-    <p>Esse aliquam ea, similique repudiandae nihil numquam, neque enim perspiciatis. Facilis dolor praesentium impedit quidem, non unde accusantium, commodi error, soluta dolores modi blanditiis similique amet hic earum, reiciendis consectetur animi in.
-      Exercitationem distinctio necessitatibus molestias quas laboriosam nam modi porro accusantium blanditiis, beatae incidunt aliquid nostrum laborum, magni cum recusandae autem doloremque qui perferendis iste non quaerat fugit. Aspernatur voluptatem
-      impedit, enim!</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius soluta incidunt, eum quos consequuntur aliquam nobis velit mollitia iste, natus ex repellendus delectus quisquam et quae, in atque a. Perspiciatis excepturi ipsum temporibus, eius odit
-      deleniti quasi voluptates eaque aliquam, iste consequatur repudiandae illo a. Voluptates eligendi reiciendis corporis itaque soluta fugit atque quaerat ipsum reprehenderit sapiente, voluptatem repellat eveniet fuga natus tempore modi vero distinctio
-      nulla accusantium recusandae, omnis.</P>
-
-    <p>Esse aliquam ea, similique repudiandae nihil numquam, neque enim perspiciatis. Facilis dolor praesentium impedit quidem, non unde accusantium, commodi error, soluta dolores modi blanditiis similique amet hic earum, reiciendis consectetur animi in.
-      Exercitationem distinctio necessitatibus molestias quas laboriosam nam modi porro accusantium blanditiis, beatae incidunt aliquid nostrum laborum, magni cum recusandae autem doloremque qui perferendis iste non quaerat fugit. Aspernatur voluptatem
-      impedit, enim!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius soluta incidunt, eum quos consequuntur aliquam nobis velit mollitia iste, natus ex repellendus delectus quisquam et quae, in atque a. Perspiciatis excepturi ipsum temporibus, eius
+          odit deleniti quasi voluptates eaque aliquam, iste consequatur repudiandae illo a. Voluptates eligendi reiciendis corporis itaque soluta fugit atque quaerat ipsum reprehenderit sapiente, voluptatem repellat eveniet fuga natus tempore modi vero
+          distinctio nulla accusantium recusandae, omnis.</P>
+      </div>
+      <div class="prettybox">
+        <img src="img/Varadero_opt.jpg" alt="">
+        <h3> Varadero </h3>
+        <p>Esse aliquam ea, similique repudiandae nihil numquam, neque enim perspiciatis. Facilis dolor praesentium impedit quidem, non unde accusantium, commodi error, soluta dolores modi blanditiis similique amet hic earum, reiciendis consectetur animi
+          in. Exercitationem distinctio necessitatibus molestias quas laboriosam nam modi porro accusantium blanditiis, beatae incidunt aliquid nostrum laborum, magni cum recusandae autem doloremque qui perferendis iste non quaerat fugit. Aspernatur voluptatem
+          impedit, enim!</p>
+      </div>
+    </div>
   </article>
   <!-- Add your site content here. Keep it pretty and use indentation :) -->
 
   <!-- HINT: Need to link to another page? Create a file with an html extension in your main project folder. -->
   <!-- Then link to it using an anchor. for example: <a href="blog.html">Blog</a> -->
 
-
+  <footer>
+    <p>Cuba blog &copy; 2018</p>
+  </footer>
 
   <script src="js/jquery-1.12.0.min.js"></script>
   <script src="js/main.js"></script>
