--- a/final_project_template/experiences_page.html
+++ b/final_project_template/experiences_page.html
@@ -51,7 +51,7 @@
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="img/IMG_4101.jpg" style="width:100%">
+      <img src="img/IMG_4101.JPG" style="width:100%">
       <div class="text">Genie in vinales</div>
     </div>
 
