--- a/final_project_template/home_page.html
+++ b/final_project_template/home_page.html
@@ -29,10 +29,10 @@
         <ul>
           <li class="current"><a href="home_page.html">Home</a></li>
           <li>
-            <a href="home_page.html">Experiences</a>
+            <a href="experiences_page.html">Experiences</a>
           </li>
           <li>
-            <a href="home_page.html">Travel Tips
+            <a href="travel_page.html">Travel Tips
 </a>
           </li>
         </ul>
