--- a/final_project_template/experiences_page.html
+++ b/final_project_template/experiences_page.html
@@ -26,12 +26,12 @@
       </div>
       <nav>
         <ul>
-          <li <a href="experiences_page.html">Home</a>
+          <li <a href="home_page.html">Home</a>
           </li>
           <li class="current"><a href="experiences_page.html">Experiences</a>
           </li>
           <li>
-            <a href="experiences_page.html">Travel Tips
+            <a href="travel_page.html">Travel Tips
 </a>
           </li>
         </ul>
