--- a/final_project_template/travel_page.html
+++ b/final_project_template/travel_page.html
@@ -26,9 +26,9 @@
       </div>
       <nav>
         <ul>
-          <li> <a href="travel_page.html">Home</a></li>
+          <li> <a href="home_page.html">Home</a></li>
           <li>
-            <a href="travel_page.html">About</a>
+            <a href="experiences_page.html">Experiences</a>
           </li>
           <li class="current"><a href="travel_page.html">Travel Tips</a>
           </li>
